fix(anchor): anchor external link icon size to be equal to font size and align top

--- a/src/components/SystemBanner/system-banner-item.css
+++ b/src/components/SystemBanner/system-banner-item.css
@@ -28,7 +28,7 @@
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  word-break: break-all;
+  word-break: break-word;
   max-height: calc(5 * var(--sgds-line-height-20, 20px)); /* 5 lines */
 }
 
@@ -97,8 +97,6 @@ slot[name="action"]::slotted(a) {
     line-clamp: 2;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    overflow: hidden;
-    word-break: break-all;
     max-height: calc(2 * var(--sgds-line-height-20, 20px)); /* 2 lines */
   }
 }
